feat: update styling

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -407,8 +407,8 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
       }
       math-field { font-size: 3rem; }
     </style>
-      <div slot="html">
-  &lt;math-field&gt;x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}&lt;/math-field&gt;</div>
+      <pre slot="html">
+  &lt;math-field&gt;x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}&lt;/math-field&gt;</pre>
     </code-playground>
 
   </section>
