feat: updated to Inter font

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -197,13 +197,14 @@ h1 {
 
 
 h1 span.first-part {
-  font-size:160px;
+  font-size:140px;
 }
 
 h1 span.second-part {
-  margin-top: -6px;
-  font-size: 127px;
-  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 110px;
+  font-weight: 200;
   letter-spacing: -6px;
   font-variant: all-small-caps;
   /* animation-delay: .2s; */
@@ -213,7 +214,7 @@ h1 span.second-part {
 }
 
 h1 span.third-part {
-  font-size: 142px; letter-spacing: -8px;
+  font-size: 120px; letter-spacing: -8px;
   /* animation-delay: .4s; */
   /* animation: 0.5s zoom-in-zoom-out 1s ease; */
 }
@@ -395,7 +396,7 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
 <h1><span class="first-part">EQUATIONS</span> <span class="second-part">SERVED WITH A SIDE OF</span> <span class="third-part">INTERACTION</span></h1>
 
 <div class="intro">
-  <p class="intro-copy">Introducing <br><kbd>&lt;math-field&gt;</kbd>:<br> a ready to use web component that works just like an HTML <kbd>&lt;textarea&gt;</kbd>, but for math.</p>
+  <p class="intro-copy">Introducing <kbd>&lt;math-field&gt;</kbd>.<br><br> Like <kbd>&lt;textarea&gt;</kbd>, <br>but for math.</p>
 
   <section class="m-lg mb-xl">
   <code-playground layout="stack" style="width:100%">
@@ -443,7 +444,7 @@ Read more about the <strong>virtual keyboard</strong>
     <i class="icon fas fa-chalkboard-teacher fill-green"></i>
     <div>
       <h3>E-Learning Adventures: Math that Takes You Places</h3>
-      <p>Integrate MathLive into online courses, e-learning platforms, and educational websites to display math equations and formulas interactively.</p><p> Develop interactive quizzes and tests that involve math problems, making the learning experience more engaging</p>
+      <p>Integrate MathLive into online courses, e-learning platforms, and educational websites to display interactive math equations and formulas.</p><p>Develop interactive quizzes and tests that involve math problems, making the learning experience more engaging.</p>
     </div>
   </div>
   
@@ -452,7 +453,7 @@ Read more about the <strong>virtual keyboard</strong>
   <!-- <i class="icon fas fa-lightbulb fill-orange"></i> -->
   <i class="icon fas fa-flask fill-orange"></i>
   <div>
-    <h3>Science and Research Websites: Equation Experiments</h3>
+    <h3>Equation Experiments</h3>
     <p>Unleash your inner mad scientist! With MathLive, equations aren't just boring symbols; they're your laboratory assistants. Display scientific research findings, formulas, and equations on websites dedicated to scientific fields. 🧪</p>
   </div>
 </div>
@@ -469,14 +470,14 @@ Read more about the <strong>virtual keyboard</strong>
   <i class="icon fas fa-file-alt fill-blue"></i>
   <div>
     <h3>Dynamic Documentation: Math with a Twist</h3>
-    <p>No more snooze-worthy documentation! MathLive spices things up by turning complex equations into a visual journey. Your technical explanations just got a serious upgrade. 📖</p>
+    <p>MathLive spices things up by turning complex equations into a visual journey. Your technical explanations just got a serious upgrade. 📖</p>
   </div>
 </div>
 
 <div class="use-case">
   <i class="icon fas fa-pencil-alt fill-yellow"></i>
   <div>
-    <h3>Math Enthusiast Blogs: Write Math, Write Magic</h3>
+    <h3>Write Math, Write Magic</h3>
     <p>Calling all math storytellers! With MathLive, equations become the heroes of your blog. Craft captivating content that waltzes between math and magic, delighting readers along the way. ✨</p>
   </div>
 </div>
