--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -32,13 +32,13 @@ sidebar:
 </style>
 <section>
 <h1 class="font-size-2xl">Hello!</h1>
-<div class='hero-container' style='float:right'>
-<picture class='hero'>
+<div class="hero-container" style="float:right">
+<picture class="hero">
   <img src="/assets/images/arno-memoji-coding.jpeg" alt="Portrait of Arno">
 </picture>
 </div>
 
-<div class='max-w-4xl mt-lg'>
+<div class="max-w-4xl mt-lg">
 
   <p>I built my first commercial app for the Mac in 1984. WinMath was one of the first 
     graphing calculator for modern computers.</p>
@@ -59,11 +59,11 @@ sidebar:
 
   <p>I can’t wait to see what you do with them. Enjoy!</p>
 
-  <ul class='signature'><li>Arno Gourdol</li>
+  <ul class="signature"><li>Arno Gourdol</li>
     <li style='opacity:.6'><i>My Erdős number is 4</i></li>
-    <li><a href='https://www.linkedin.com/in/arnog'><i class="fab fa-linkedin"></i></a>
-    <a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
-    <a href='mailto:arno@arno.org'><i class="far fa-envelope"></i></i></a></li>
+    <li><a href="https://www.linkedin.com/in/arnog"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/arnog"><i class="fab fa-instagram"></i></a>
+    <a href="mailto:arno@arno.org"><i class="far fa-envelope"></i></a></li>
   </ul>
 
 
