--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -203,12 +203,11 @@ h1 span.first-part {
 }
 
 h1 span.second-part {
-  margin-top: 0;
-  margin-bottom: 16px;
-  font-size: 110px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  font-size: 75px;
   font-weight: 200;
   letter-spacing: -6px;
-  font-variant: all-small-caps;
   /* animation-delay: .2s; */
   /* animation: zoom-in-zoom-out 1s ease infinite; */
   /* animation: 0.2s zoom-in-zoom-out 1s ease infinite;; */
@@ -452,6 +451,10 @@ Read more about the <strong>virtual keyboard</strong>
       <p>Integrate MathLive into online courses, e-learning platforms, and educational websites to display interactive math equations and formulas.</p><p>Develop interactive quizzes and tests that involve math problems, making the learning experience more engaging. Combine MathLive 
         with the Compute Engine to check the correctness of the student's answers in real-time.
       </p>
+      {% readmore "/tutorials/simple-quiz/" %}
+      Read this step-by-step tutorial to learn how to build a **simple quiz** with MathLive
+      {% endreadmore %}
+
       {% readmore "/mathlive/guides/fill-in-the-blank/" %}
       Learn more about authoring **fill-in-the-blank** questions with MathLive
       {% endreadmore %}
